# portfolio-os

./: .gitignore  AGENTS.md  Portfolio_OS_Macro_Stage_Roadmap.md  Portfolio_OS_Stage1_Ledger_Truth_Foundation_Tech_Spec.md  README.md  pyproject.toml  소프트웨어 아키텍쳐 진단서.md  프로젝트 바이블.md
docs/: DEMO_SCRIPT.md  PORTFOLIO_SUMMARY.md  Portfolio_OS_Final_QA_and_Code_Structure.md  V2_ROADMAP.md  architecture.md  database_schema.md  decimal_policy.md  mvp_scope.md  reconciliation_rules.md  stage10_handoff_for_stage11.md  stage1_implementation_report.md  stage1_ledger_truth_foundation.md  stage2_cli_usage.md  stage2_database_schema.md  stage2_handoff_for_stage3.md  stage2_implementation_report.md  stage2_risk_gated_manual_operating_loop_tech_spec.md  stage2_risk_rules.md  stage2_state_machines.md  stage3_cli_usage.md  stage3_database_schema.md  stage3_fact_research_macro_context_tech_spec.md  stage3_implementation_report.md  stage3_macro_context_rules.md  stage3_research_rules.md  stage4_cli_usage.md  stage4_database_schema.md  stage4_handoff_for_stage5.md  stage4_implementation_report.md  stage4_memo_rules.md  stage4_senior_decision_memo_tech_spec.md  stage5_cli_usage.md  stage5_context_package_rules.md  stage5_database_schema.md  stage5_final_system_handoff.md  stage5_governance_context_economy_tech_spec.md  stage5_governance_rules.md  stage5_handoff_for_stage6.md  stage5_implementation_report.md  stage6_handoff_for_stage7.md  (+4 more)
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
migrations/: 001_create_accounts.sql  002_create_instruments.sql  (+61 more)
(+279 files in other folders)
